--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "typescript": "^5.4.5"
     },
     "author": {
-        "name": "Link",
+        "name": "Linkle",
         "url": "https://github.com/linkle69/"
     },
     "contributors": [
